Checking for location, improved formatting, location info in UX